--- a/AluraWebAPI/Views/_ViewImports.cshtml
+++ b/AluraWebAPI/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using AluraWebAPI
 @using AluraWebAPI.Models
+@using Alura.ListaLeitura.Modelos
+@using Alura.ListaLeitura.Seguranca
+@using Alura.ListaLeitura.WebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
