--- a/AluraWebAPI/Views/Livro/Novo.cshtml
+++ b/AluraWebAPI/Views/Livro/Novo.cshtml
@@ -88,6 +88,8 @@
                 }
                 else {
                     $('#imgCapa').attr('src', '~/images/capas/capa-vazia.png');
+                    console.log("Caiu no Else do JS do NovoLivro!");
+
                 }
             });
         });
